// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page Snapshots Home Page matches snapshot with draft mode enabled 1`] = `
<div>
  <div
    class="container mx-auto px-5"
  >
    <section
      class="flex-col md:flex-row flex items-center md:justify-between mt-16 mb-16 md:mb-12"
    >
      <h1
        class="text-6xl md:text-8xl font-bold tracking-tighter leading-tight md:pr-8"
      >
        Blog de TDW.
      </h1>
      <h2
        class="text-center md:text-left text-lg mt-5 md:pl-8"
      >
        Aplicação de exemplo para o MP1 com:
         
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://nextjs.org/"
        >
          Next.js
        </a>
         
        e
         
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://www.contentful.com"
        >
          Contentful
        </a>
         
        .
      </h2>
    </section>
    <section>
      <div
        class="mb-8 md:mb-16"
      >
        <div
          class="sm:mx-0"
        >
          <a
            aria-label="Hero Post"
            href="/posts/hero-post"
          >
            <img
              alt="Cover Image for Hero Post"
              class="shadow-small [object Object]"
              data-nimg="1"
              decoding="async"
              height="1000"
              src="https://example.com/hero.jpg?w=3840&q=75"
              srcset="https://example.com/hero.jpg?w=2048&q=75 1x, https://example.com/hero.jpg?w=3840&q=75 2x"
              style="color: transparent;"
              width="2000"
            />
          </a>
        </div>
      </div>
      <div
        class="md:grid md:grid-cols-2 md:gap-x-16 lg:gap-x-8 mb-20 md:mb-28"
      >
        <div>
          <h3
            class="mb-4 text-4xl lg:text-6xl leading-tight"
          >
            <a
              class="hover:underline"
              href="/posts/hero-post"
            >
              Hero Post
            </a>
          </h3>
          <div
            class="mb-4 md:mb-0 text-lg"
          >
            <time
              datetime="2023-09-01"
            >
              September 1, 2023
            </time>
          </div>
        </div>
        <div>
          <p
            class="text-lg leading-relaxed mb-4"
          >
            This is the hero post excerpt
          </p>
          <div
            class="flex items-center"
          >
            <div
              class="mr-4 w-12 h-12"
            >
              <img
                alt="Hero Author"
                class="object-cover h-full rounded-full"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="https://example.com/hero-author.jpg?w=96&q=75"
                srcset="https://example.com/hero-author.jpg?w=48&q=75 1x, https://example.com/hero-author.jpg?w=96&q=75 2x"
                style="color: transparent;"
                width="48"
              />
            </div>
            <div
              class="text-xl font-bold"
            >
              Hero Author
            </div>
          </div>
        </div>
      </div>
    </section>
    <section>
      <h2
        class="mb-8 text-6xl md:text-7xl font-bold tracking-tighter leading-tight"
      >
        More Stories
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 md:gap-x-16 lg:gap-x-32 gap-y-20 md:gap-y-32 mb-32"
      >
        <div>
          <div
            class="mb-5"
          >
            <div
              class="sm:mx-0"
            >
              <a
                aria-label="More Story One"
                href="/posts/more-story-one"
              >
                <img
                  alt="Cover Image for More Story One"
                  class="shadow-small [object Object]"
                  data-nimg="1"
                  decoding="async"
                  height="1000"
                  src="https://example.com/more1.jpg?w=3840&q=75"
                  srcset="https://example.com/more1.jpg?w=2048&q=75 1x, https://example.com/more1.jpg?w=3840&q=75 2x"
                  style="color: transparent;"
                  width="2000"
                />
              </a>
            </div>
          </div>
          <h3
            class="text-3xl mb-3 leading-snug"
          >
            <a
              class="hover:underline"
              href="/posts/more-story-one"
            >
              More Story One
            </a>
          </h3>
          <div
            class="text-lg mb-4"
          >
            <time
              datetime="2023-08-15"
            >
              August 15, 2023
            </time>
          </div>
          <p
            class="text-lg leading-relaxed mb-4"
          >
            First more story excerpt
          </p>
          <div
            class="flex items-center"
          >
            <div
              class="mr-4 w-12 h-12"
            >
              <img
                alt="Author One"
                class="object-cover h-full rounded-full"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="https://example.com/author1.jpg?w=96&q=75"
                srcset="https://example.com/author1.jpg?w=48&q=75 1x, https://example.com/author1.jpg?w=96&q=75 2x"
                style="color: transparent;"
                width="48"
              />
            </div>
            <div
              class="text-xl font-bold"
            >
              Author One
            </div>
          </div>
        </div>
        <div>
          <div
            class="mb-5"
          >
            <div
              class="sm:mx-0"
            >
              <a
                aria-label="More Story Two"
                href="/posts/more-story-two"
              >
                <img
                  alt="Cover Image for More Story Two"
                  class="shadow-small [object Object]"
                  data-nimg="1"
                  decoding="async"
                  height="1000"
                  src="https://example.com/more2.jpg?w=3840&q=75"
                  srcset="https://example.com/more2.jpg?w=2048&q=75 1x, https://example.com/more2.jpg?w=3840&q=75 2x"
                  style="color: transparent;"
                  width="2000"
                />
              </a>
            </div>
          </div>
          <h3
            class="text-3xl mb-3 leading-snug"
          >
            <a
              class="hover:underline"
              href="/posts/more-story-two"
            >
              More Story Two
            </a>
          </h3>
          <div
            class="text-lg mb-4"
          >
            <time
              datetime="2023-08-10"
            >
              August 10, 2023
            </time>
          </div>
          <p
            class="text-lg leading-relaxed mb-4"
          >
            Second more story excerpt
          </p>
          <div
            class="flex items-center"
          >
            <div
              class="mr-4 w-12 h-12"
            >
              <img
                alt="Author Two"
                class="object-cover h-full rounded-full"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="https://example.com/author2.jpg?w=96&q=75"
                srcset="https://example.com/author2.jpg?w=48&q=75 1x, https://example.com/author2.jpg?w=96&q=75 2x"
                style="color: transparent;"
                width="48"
              />
            </div>
            <div
              class="text-xl font-bold"
            >
              Author Two
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Page Snapshots Home Page matches snapshot with no posts 1`] = `
<div>
  <div
    class="container mx-auto px-5"
  >
    <section
      class="flex-col md:flex-row flex items-center md:justify-between mt-16 mb-16 md:mb-12"
    >
      <h1
        class="text-6xl md:text-8xl font-bold tracking-tighter leading-tight md:pr-8"
      >
        Blog de TDW.
      </h1>
      <h2
        class="text-center md:text-left text-lg mt-5 md:pl-8"
      >
        Aplicação de exemplo para o MP1 com:
         
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://nextjs.org/"
        >
          Next.js
        </a>
         
        e
         
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://www.contentful.com"
        >
          Contentful
        </a>
         
        .
      </h2>
    </section>
    <p>
      No posts found. Please check your Contentful configuration.
    </p>
  </div>
</div>
`;

exports[`Page Snapshots Home Page matches snapshot with posts 1`] = `
<div>
  <div
    class="container mx-auto px-5"
  >
    <section
      class="flex-col md:flex-row flex items-center md:justify-between mt-16 mb-16 md:mb-12"
    >
      <h1
        class="text-6xl md:text-8xl font-bold tracking-tighter leading-tight md:pr-8"
      >
        Blog de TDW.
      </h1>
      <h2
        class="text-center md:text-left text-lg mt-5 md:pl-8"
      >
        Aplicação de exemplo para o MP1 com:
         
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://nextjs.org/"
        >
          Next.js
        </a>
         
        e
         
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://www.contentful.com"
        >
          Contentful
        </a>
         
        .
      </h2>
    </section>
    <section>
      <div
        class="mb-8 md:mb-16"
      >
        <div
          class="sm:mx-0"
        >
          <a
            aria-label="Hero Post"
            href="/posts/hero-post"
          >
            <img
              alt="Cover Image for Hero Post"
              class="shadow-small [object Object]"
              data-nimg="1"
              decoding="async"
              height="1000"
              src="https://example.com/hero.jpg?w=3840&q=75"
              srcset="https://example.com/hero.jpg?w=2048&q=75 1x, https://example.com/hero.jpg?w=3840&q=75 2x"
              style="color: transparent;"
              width="2000"
            />
          </a>
        </div>
      </div>
      <div
        class="md:grid md:grid-cols-2 md:gap-x-16 lg:gap-x-8 mb-20 md:mb-28"
      >
        <div>
          <h3
            class="mb-4 text-4xl lg:text-6xl leading-tight"
          >
            <a
              class="hover:underline"
              href="/posts/hero-post"
            >
              Hero Post
            </a>
          </h3>
          <div
            class="mb-4 md:mb-0 text-lg"
          >
            <time
              datetime="2023-09-01"
            >
              September 1, 2023
            </time>
          </div>
        </div>
        <div>
          <p
            class="text-lg leading-relaxed mb-4"
          >
            This is the hero post excerpt
          </p>
          <div
            class="flex items-center"
          >
            <div
              class="mr-4 w-12 h-12"
            >
              <img
                alt="Hero Author"
                class="object-cover h-full rounded-full"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="https://example.com/hero-author.jpg?w=96&q=75"
                srcset="https://example.com/hero-author.jpg?w=48&q=75 1x, https://example.com/hero-author.jpg?w=96&q=75 2x"
                style="color: transparent;"
                width="48"
              />
            </div>
            <div
              class="text-xl font-bold"
            >
              Hero Author
            </div>
          </div>
        </div>
      </div>
    </section>
    <section>
      <h2
        class="mb-8 text-6xl md:text-7xl font-bold tracking-tighter leading-tight"
      >
        More Stories
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 md:gap-x-16 lg:gap-x-32 gap-y-20 md:gap-y-32 mb-32"
      >
        <div>
          <div
            class="mb-5"
          >
            <div
              class="sm:mx-0"
            >
              <a
                aria-label="More Story One"
                href="/posts/more-story-one"
              >
                <img
                  alt="Cover Image for More Story One"
                  class="shadow-small [object Object]"
                  data-nimg="1"
                  decoding="async"
                  height="1000"
                  src="https://example.com/more1.jpg?w=3840&q=75"
                  srcset="https://example.com/more1.jpg?w=2048&q=75 1x, https://example.com/more1.jpg?w=3840&q=75 2x"
                  style="color: transparent;"
                  width="2000"
                />
              </a>
            </div>
          </div>
          <h3
            class="text-3xl mb-3 leading-snug"
          >
            <a
              class="hover:underline"
              href="/posts/more-story-one"
            >
              More Story One
            </a>
          </h3>
          <div
            class="text-lg mb-4"
          >
            <time
              datetime="2023-08-15"
            >
              August 15, 2023
            </time>
          </div>
          <p
            class="text-lg leading-relaxed mb-4"
          >
            First more story excerpt
          </p>
          <div
            class="flex items-center"
          >
            <div
              class="mr-4 w-12 h-12"
            >
              <img
                alt="Author One"
                class="object-cover h-full rounded-full"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="https://example.com/author1.jpg?w=96&q=75"
                srcset="https://example.com/author1.jpg?w=48&q=75 1x, https://example.com/author1.jpg?w=96&q=75 2x"
                style="color: transparent;"
                width="48"
              />
            </div>
            <div
              class="text-xl font-bold"
            >
              Author One
            </div>
          </div>
        </div>
        <div>
          <div
            class="mb-5"
          >
            <div
              class="sm:mx-0"
            >
              <a
                aria-label="More Story Two"
                href="/posts/more-story-two"
              >
                <img
                  alt="Cover Image for More Story Two"
                  class="shadow-small [object Object]"
                  data-nimg="1"
                  decoding="async"
                  height="1000"
                  src="https://example.com/more2.jpg?w=3840&q=75"
                  srcset="https://example.com/more2.jpg?w=2048&q=75 1x, https://example.com/more2.jpg?w=3840&q=75 2x"
                  style="color: transparent;"
                  width="2000"
                />
              </a>
            </div>
          </div>
          <h3
            class="text-3xl mb-3 leading-snug"
          >
            <a
              class="hover:underline"
              href="/posts/more-story-two"
            >
              More Story Two
            </a>
          </h3>
          <div
            class="text-lg mb-4"
          >
            <time
              datetime="2023-08-10"
            >
              August 10, 2023
            </time>
          </div>
          <p
            class="text-lg leading-relaxed mb-4"
          >
            Second more story excerpt
          </p>
          <div
            class="flex items-center"
          >
            <div
              class="mr-4 w-12 h-12"
            >
              <img
                alt="Author Two"
                class="object-cover h-full rounded-full"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="https://example.com/author2.jpg?w=96&q=75"
                srcset="https://example.com/author2.jpg?w=48&q=75 1x, https://example.com/author2.jpg?w=96&q=75 2x"
                style="color: transparent;"
                width="48"
              />
            </div>
            <div
              class="text-xl font-bold"
            >
              Author Two
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Page Snapshots Home Page matches snapshot with single post (no more stories) 1`] = `
<div>
  <div
    class="container mx-auto px-5"
  >
    <section
      class="flex-col md:flex-row flex items-center md:justify-between mt-16 mb-16 md:mb-12"
    >
      <h1
        class="text-6xl md:text-8xl font-bold tracking-tighter leading-tight md:pr-8"
      >
        Blog de TDW.
      </h1>
      <h2
        class="text-center md:text-left text-lg mt-5 md:pl-8"
      >
        Aplicação de exemplo para o MP1 com:
         
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://nextjs.org/"
        >
          Next.js
        </a>
         
        e
         
        <a
          class="underline hover:text-success duration-200 transition-colors"
          href="https://www.contentful.com"
        >
          Contentful
        </a>
         
        .
      </h2>
    </section>
    <section>
      <div
        class="mb-8 md:mb-16"
      >
        <div
          class="sm:mx-0"
        >
          <a
            aria-label="Hero Post"
            href="/posts/hero-post"
          >
            <img
              alt="Cover Image for Hero Post"
              class="shadow-small [object Object]"
              data-nimg="1"
              decoding="async"
              height="1000"
              src="https://example.com/hero.jpg?w=3840&q=75"
              srcset="https://example.com/hero.jpg?w=2048&q=75 1x, https://example.com/hero.jpg?w=3840&q=75 2x"
              style="color: transparent;"
              width="2000"
            />
          </a>
        </div>
      </div>
      <div
        class="md:grid md:grid-cols-2 md:gap-x-16 lg:gap-x-8 mb-20 md:mb-28"
      >
        <div>
          <h3
            class="mb-4 text-4xl lg:text-6xl leading-tight"
          >
            <a
              class="hover:underline"
              href="/posts/hero-post"
            >
              Hero Post
            </a>
          </h3>
          <div
            class="mb-4 md:mb-0 text-lg"
          >
            <time
              datetime="2023-09-01"
            >
              September 1, 2023
            </time>
          </div>
        </div>
        <div>
          <p
            class="text-lg leading-relaxed mb-4"
          >
            This is the hero post excerpt
          </p>
          <div
            class="flex items-center"
          >
            <div
              class="mr-4 w-12 h-12"
            >
              <img
                alt="Hero Author"
                class="object-cover h-full rounded-full"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="https://example.com/hero-author.jpg?w=96&q=75"
                srcset="https://example.com/hero-author.jpg?w=48&q=75 1x, https://example.com/hero-author.jpg?w=96&q=75 2x"
                style="color: transparent;"
                width="48"
              />
            </div>
            <div
              class="text-xl font-bold"
            >
              Hero Author
            </div>
          </div>
        </div>
      </div>
    </section>
    <section>
      <h2
        class="mb-8 text-6xl md:text-7xl font-bold tracking-tighter leading-tight"
      >
        More Stories
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 md:gap-x-16 lg:gap-x-32 gap-y-20 md:gap-y-32 mb-32"
      />
    </section>
  </div>
</div>
`;

exports[`Page Snapshots Post Detail Page matches snapshot with different post content 1`] = `
<div>
  <div
    class="container mx-auto px-5"
  >
    <h2
      class="mb-20 mt-8 text-2xl font-bold leading-tight tracking-tight md:text-4xl md:tracking-tighter"
    >
      <a
        class="hover:underline"
        href="/"
      >
        Blog
      </a>
      .
    </h2>
    <article>
      <h1
        class="mb-12 text-center text-6xl font-bold leading-tight tracking-tighter md:text-left md:text-7xl md:leading-none lg:text-8xl"
      >
        Different Post Title
      </h1>
      <div
        class="hidden md:mb-12 md:block"
      >
        <div
          class="flex items-center"
        >
          <div
            class="mr-4 w-12 h-12"
          >
            <img
              alt="Post Author"
              class="object-cover h-full rounded-full"
              data-nimg="1"
              decoding="async"
              height="48"
              loading="lazy"
              src="https://example.com/author.jpg?w=96&q=75"
              srcset="https://example.com/author.jpg?w=48&q=75 1x, https://example.com/author.jpg?w=96&q=75 2x"
              style="color: transparent;"
              width="48"
            />
          </div>
          <div
            class="text-xl font-bold"
          >
            Post Author
          </div>
        </div>
      </div>
      <div
        class="mb-8 sm:mx-0 md:mb-16"
      >
        <div
          class="sm:mx-0"
        >
          <img
            alt="Cover Image for Different Post Title"
            class="shadow-small [object Object]"
            data-nimg="1"
            decoding="async"
            height="1000"
            src="https://example.com/cover.jpg?w=3840&q=75"
            srcset="https://example.com/cover.jpg?w=2048&q=75 1x, https://example.com/cover.jpg?w=3840&q=75 2x"
            style="color: transparent;"
            width="2000"
          />
        </div>
      </div>
      <div
        class="mx-auto max-w-2xl"
      >
        <div
          class="mb-6 block md:hidden"
        >
          <div
            class="flex items-center"
          >
            <div
              class="mr-4 w-12 h-12"
            >
              <img
                alt="Post Author"
                class="object-cover h-full rounded-full"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="https://example.com/author.jpg?w=96&q=75"
                srcset="https://example.com/author.jpg?w=48&q=75 1x, https://example.com/author.jpg?w=96&q=75 2x"
                style="color: transparent;"
                width="48"
              />
            </div>
            <div
              class="text-xl font-bold"
            >
              Post Author
            </div>
          </div>
        </div>
        <div
          class="mb-6 text-lg"
        >
          <time
            datetime="2023-08-01"
          >
            August 1, 2023
          </time>
        </div>
      </div>
      <div
        class="mx-auto max-w-2xl"
      >
        <div
          class="prose"
        >
          <h1>
            Main Heading
          </h1>
          <p>
            Different content here.
          </p>
        </div>
      </div>
    </article>
    <hr
      class="border-accent-2 mt-28 mb-24"
    />
    <section>
      <h2
        class="mb-8 text-6xl md:text-7xl font-bold tracking-tighter leading-tight"
      >
        More Stories
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 md:gap-x-16 lg:gap-x-32 gap-y-20 md:gap-y-32 mb-32"
      />
    </section>
  </div>
</div>
`;

exports[`Page Snapshots Post Detail Page matches snapshot with post and more stories 1`] = `
<div>
  <div
    class="container mx-auto px-5"
  >
    <h2
      class="mb-20 mt-8 text-2xl font-bold leading-tight tracking-tight md:text-4xl md:tracking-tighter"
    >
      <a
        class="hover:underline"
        href="/"
      >
        Blog
      </a>
      .
    </h2>
    <article>
      <h1
        class="mb-12 text-center text-6xl font-bold leading-tight tracking-tighter md:text-left md:text-7xl md:leading-none lg:text-8xl"
      >
        Sample Blog Post
      </h1>
      <div
        class="hidden md:mb-12 md:block"
      >
        <div
          class="flex items-center"
        >
          <div
            class="mr-4 w-12 h-12"
          >
            <img
              alt="Post Author"
              class="object-cover h-full rounded-full"
              data-nimg="1"
              decoding="async"
              height="48"
              loading="lazy"
              src="https://example.com/author.jpg?w=96&q=75"
              srcset="https://example.com/author.jpg?w=48&q=75 1x, https://example.com/author.jpg?w=96&q=75 2x"
              style="color: transparent;"
              width="48"
            />
          </div>
          <div
            class="text-xl font-bold"
          >
            Post Author
          </div>
        </div>
      </div>
      <div
        class="mb-8 sm:mx-0 md:mb-16"
      >
        <div
          class="sm:mx-0"
        >
          <img
            alt="Cover Image for Sample Blog Post"
            class="shadow-small [object Object]"
            data-nimg="1"
            decoding="async"
            height="1000"
            src="https://example.com/cover.jpg?w=3840&q=75"
            srcset="https://example.com/cover.jpg?w=2048&q=75 1x, https://example.com/cover.jpg?w=3840&q=75 2x"
            style="color: transparent;"
            width="2000"
          />
        </div>
      </div>
      <div
        class="mx-auto max-w-2xl"
      >
        <div
          class="mb-6 block md:hidden"
        >
          <div
            class="flex items-center"
          >
            <div
              class="mr-4 w-12 h-12"
            >
              <img
                alt="Post Author"
                class="object-cover h-full rounded-full"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="https://example.com/author.jpg?w=96&q=75"
                srcset="https://example.com/author.jpg?w=48&q=75 1x, https://example.com/author.jpg?w=96&q=75 2x"
                style="color: transparent;"
                width="48"
              />
            </div>
            <div
              class="text-xl font-bold"
            >
              Post Author
            </div>
          </div>
        </div>
        <div
          class="mb-6 text-lg"
        >
          <time
            datetime="2023-07-20"
          >
            July 20, 2023
          </time>
        </div>
      </div>
      <div
        class="mx-auto max-w-2xl"
      >
        <div
          class="prose"
        >
          <p>
            This is sample post content.
          </p>
        </div>
      </div>
    </article>
    <hr
      class="border-accent-2 mt-28 mb-24"
    />
    <section>
      <h2
        class="mb-8 text-6xl md:text-7xl font-bold tracking-tighter leading-tight"
      >
        More Stories
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 md:gap-x-16 lg:gap-x-32 gap-y-20 md:gap-y-32 mb-32"
      >
        <div>
          <div
            class="mb-5"
          >
            <div
              class="sm:mx-0"
            >
              <a
                aria-label="Related Post One"
                href="/posts/related-one"
              >
                <img
                  alt="Cover Image for Related Post One"
                  class="shadow-small [object Object]"
                  data-nimg="1"
                  decoding="async"
                  height="1000"
                  src="https://example.com/related1.jpg?w=3840&q=75"
                  srcset="https://example.com/related1.jpg?w=2048&q=75 1x, https://example.com/related1.jpg?w=3840&q=75 2x"
                  style="color: transparent;"
                  width="2000"
                />
              </a>
            </div>
          </div>
          <h3
            class="text-3xl mb-3 leading-snug"
          >
            <a
              class="hover:underline"
              href="/posts/related-one"
            >
              Related Post One
            </a>
          </h3>
          <div
            class="text-lg mb-4"
          >
            <time
              datetime="2023-07-15"
            >
              July 15, 2023
            </time>
          </div>
          <p
            class="text-lg leading-relaxed mb-4"
          >
            Related post excerpt
          </p>
          <div
            class="flex items-center"
          >
            <div
              class="mr-4 w-12 h-12"
            >
              <img
                alt="Related Author"
                class="object-cover h-full rounded-full"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="https://example.com/related-author.jpg?w=96&q=75"
                srcset="https://example.com/related-author.jpg?w=48&q=75 1x, https://example.com/related-author.jpg?w=96&q=75 2x"
                style="color: transparent;"
                width="48"
              />
            </div>
            <div
              class="text-xl font-bold"
            >
              Related Author
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Page Snapshots Post Detail Page matches snapshot with post and no more stories 1`] = `
<div>
  <div
    class="container mx-auto px-5"
  >
    <h2
      class="mb-20 mt-8 text-2xl font-bold leading-tight tracking-tight md:text-4xl md:tracking-tighter"
    >
      <a
        class="hover:underline"
        href="/"
      >
        Blog
      </a>
      .
    </h2>
    <article>
      <h1
        class="mb-12 text-center text-6xl font-bold leading-tight tracking-tighter md:text-left md:text-7xl md:leading-none lg:text-8xl"
      >
        Sample Blog Post
      </h1>
      <div
        class="hidden md:mb-12 md:block"
      >
        <div
          class="flex items-center"
        >
          <div
            class="mr-4 w-12 h-12"
          >
            <img
              alt="Post Author"
              class="object-cover h-full rounded-full"
              data-nimg="1"
              decoding="async"
              height="48"
              loading="lazy"
              src="https://example.com/author.jpg?w=96&q=75"
              srcset="https://example.com/author.jpg?w=48&q=75 1x, https://example.com/author.jpg?w=96&q=75 2x"
              style="color: transparent;"
              width="48"
            />
          </div>
          <div
            class="text-xl font-bold"
          >
            Post Author
          </div>
        </div>
      </div>
      <div
        class="mb-8 sm:mx-0 md:mb-16"
      >
        <div
          class="sm:mx-0"
        >
          <img
            alt="Cover Image for Sample Blog Post"
            class="shadow-small [object Object]"
            data-nimg="1"
            decoding="async"
            height="1000"
            src="https://example.com/cover.jpg?w=3840&q=75"
            srcset="https://example.com/cover.jpg?w=2048&q=75 1x, https://example.com/cover.jpg?w=3840&q=75 2x"
            style="color: transparent;"
            width="2000"
          />
        </div>
      </div>
      <div
        class="mx-auto max-w-2xl"
      >
        <div
          class="mb-6 block md:hidden"
        >
          <div
            class="flex items-center"
          >
            <div
              class="mr-4 w-12 h-12"
            >
              <img
                alt="Post Author"
                class="object-cover h-full rounded-full"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="https://example.com/author.jpg?w=96&q=75"
                srcset="https://example.com/author.jpg?w=48&q=75 1x, https://example.com/author.jpg?w=96&q=75 2x"
                style="color: transparent;"
                width="48"
              />
            </div>
            <div
              class="text-xl font-bold"
            >
              Post Author
            </div>
          </div>
        </div>
        <div
          class="mb-6 text-lg"
        >
          <time
            datetime="2023-07-20"
          >
            July 20, 2023
          </time>
        </div>
      </div>
      <div
        class="mx-auto max-w-2xl"
      >
        <div
          class="prose"
        >
          <p>
            This is sample post content.
          </p>
        </div>
      </div>
    </article>
    <hr
      class="border-accent-2 mt-28 mb-24"
    />
    <section>
      <h2
        class="mb-8 text-6xl md:text-7xl font-bold tracking-tighter leading-tight"
      >
        More Stories
      </h2>
      <div
        class="grid grid-cols-1 md:grid-cols-2 md:gap-x-16 lg:gap-x-32 gap-y-20 md:gap-y-32 mb-32"
      />
    </section>
  </div>
</div>
`;
